# pytorch-image-anaytics-all

./: .gitignore  EXPLORATION.md  IMPLEMENTATION_PLAN.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
configs/classification/: bigearthnet_multilabel.yaml  cifar10_resnet18.yaml  eurosat_ms_scratch.yaml  eurosat_satmae_linearprobe.yaml  multispectral_resnet50.yaml  smoke_fake.yaml
configs/detection/: cascade_rcnn_shapes.yaml  detr_shapes.yaml  faster_rcnn_shapes.yaml  fcos_shapes.yaml  retinanet_resnet50_coco.yaml  retinanet_shapes.yaml
configs/pointcloud/: dgcnn_primitives.yaml  pointnet2_seg.yaml  pointnet_primitives.yaml  pointpillars_synthetic.yaml
configs/segmentation/: change_detection_shapes.yaml  deeplabv3plus_shapes.yaml  mask_rcnn_shapes.yaml  segformer_shapes.yaml  smoke.yaml  unet_shapes.yaml
notebooks/: 01_classification_quickstart.ipynb  02_detection.ipynb  03_segmentation.ipynb  04_satellite_multispectral.ipynb  05_3d_pointcloud.ipynb
scripts/: embed.py  evaluate.py  export.py  infer.py  train.py
src/image_analytics/: __init__.py
src/image_analytics/backbones/: __init__.py  base.py  convnext.py  efficientnet.py  multichannel.py  registry.py  resnet.py  swin.py  vit.py
src/image_analytics/classification/: __init__.py  models.py  multilabel.py  train.py
src/image_analytics/core/: __init__.py  callbacks.py  config.py  evaluator.py  mlflow.py  registry.py  trainer.py
src/image_analytics/data/: __init__.py  collate.py  samplers.py
src/image_analytics/detection/: __init__.py  box_coder.py  hf_detr.py  losses.py  train.py  trainer.py  yolo.py
src/image_analytics/detection_3d/: __init__.py  _cuda_gate.py  bev.py  box3d.py  dgcnn.py  ops.py  pointnet.py  pointpillars.py  segmentation_3d.py  train.py  voxel.py
src/image_analytics/foundation/: __init__.py  (+4 more)
tests/: conftest.py  test_backbones.py  test_band_group_stems.py  test_box3d.py  test_cascade_rcnn.py  test_change_detection.py  test_config.py  test_cuda_gated_3d.py  test_datasets.py  test_detection3d_evaluator.py  test_detection_anchors.py  test_detection_data.py  test_detection_evaluator.py  test_detection_extras.py  test_detection_losses.py  test_detr.py  test_drift_monitor.py  test_embeddings.py  test_evaluator.py  test_faster_rcnn.py  test_fcos.py  test_foundation_backbones.py  test_foundation_sam.py  test_infer.py  test_mask_evaluator.py  test_mask_rcnn.py  test_mlflow_callback.py  test_models.py  test_onnx_export.py  test_panoptic_evaluator.py  test_point_models.py  test_pointcloud_data.py  test_pointcloud_ops.py  test_pointpillars.py  test_registry.py  test_retinanet.py  test_segmentation_data.py  test_segmentation_evaluator.py  test_segmentation_losses.py  test_segmentation_models.py  (+7 more)
(+52 files in other folders)
