[project]
name = "image-analytics"
version = "0.1.0"
description = "Modular PyTorch platform for image analytics: classification, detection, segmentation, multispectral, and 3D"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # torch 2.2.x is the last release with macOS x86_64 wheels; Linux/CUDA
    # environments resolve to current releases.
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.11",          # Hungarian matching (DETR)
    "pycocotools>=2.0.7",   # COCO datasets + evaluation
]

[project.optional-dependencies]
detection = ["ultralytics>=8.3"]
geo = ["rasterio>=1.3"]
notebooks = ["matplotlib>=3.8", "jupyter"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_analytics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
